# OpenGL

BasicOpenGL/: CMakeLists.txt  Dependency.cmake
BasicOpenGL/include/: Image.hpp  Mesh.hpp  Model.hpp  Shader.hpp
BasicOpenGL/resource/model/: model.mtl
BasicOpenGL/shader/: basic.vs  fragshader.fs  mesh.fs  mesh.vs  texture.fs  vertshader.vs
BasicOpenGL/src/: main.cpp
HelloOpenGL/: Source.cpp
HelloOpenGL_CMake/: CMakeLists.txt  Dependency.cmake
HelloOpenGL_CMake/src/: main.cpp
